[package]
name = "pwsec"
version = "0.5.1"
edition = "2021"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["heapless"] }
generic-array = "0.14"
pbkdf2 = { version = "0.12", features = ["simple"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
version-sync = "0.9"
